# coffee-db

./: .gitignore  Makefile  README.md  app.py  pyproject.toml  requirements.txt
.github/workflows/: basic-checks.yml  integration-test.yml  unit-test.yml
.streamlit/: config.toml
coffee_db/: __init__.py  coffee.py  data_loaders.py  validate.py
coffee_db/app/: __init__.py  forms.py  site.py  tables.py
coffee_db/app/pages/: __init__.py  add_remove_data.py  home_page.py  view_data.py  visualizations.py
coffee_db/app/utils/: __init__.py  custom_title.py  flatten_list.py  page.py  tab.py
coffee_db/app/visualizations/: diversity_plotter.py  world_map_plotter.py
coffee_db/database/: __init__.py  config.py  heroku_psql.py
coffee_db/visualizations/: datetime_plot.py  diversity_plotter.py  map_visualizations.py  radial_plot.py
docs/: architecture_diagram.drawio
helpers/: db_init.sql
tests/: pytest.ini
tests/test_coffee_db/: conftest.py  test_database.py  test_datetime_plotter.py  test_pydantic_validation.py  test_worldmap_plotter.py
tests/test_integration/: test_database_functionality.py  test_database_integration.py  test_db_connection.py  test_frontend.py  test_prod_db.py
tests/test_streamlit_integration/: test_frontend.py
user_variation_wip/: coffee_data.txt  user_variation.ipynb
